# followthrough

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
config/: effect-policy.example.json
docs/: ACCEPTANCE_MATRIX.md  BACKUP_RESTORE.md  CURRENT_STATE.md  DEMO.md  EFFECTORS.md  EMERGENCY_CONTROLS.md  IMPLEMENTATION_PLAN.md  MEMO_SETUP.md  OMI_SETUP.md  PARTNER_CHECKLIST.md  PROJECT_STATUS_REPORT_2026-07-11.md  SELF_IMPROVEMENT.md  SOAK.md  SUBMISSION.md  THREAT_MODEL.md  hermes-buildathon.env.example
evals/: cases.json
followthrough/: __init__.py  adb_bridge.py  app.py  archive.py  archive_store.py  backup.py  bus.py  classifier.py  config.py  controls.py  crew.py  desktop.py  hcompany.py  hermes.py  integrations.py  kanban.py  livekit_agent.py  livekit_tokens.py  local_desktop_api.py  models.py  relevance.py  repository_pipeline.py  runner.py  security.py  self_improvement.py  soak.py  store.py
scripts/: enable-hai.sh  eval.py  followthrough-adb-bridge.py  followthrough-backup.py  followthrough-desktop-api.py  followthrough-effector.py  followthrough-orchestrator.py  followthrough-runner.py  followthrough-soak.py  hermes-stdin-worker.py  record-demo.sh  run-local-desktop.sh  termux-followthrough-audio.sh
systemd/: followthrough-adb-bridge.service  followthrough-livekit.service  followthrough-orchestrator.service  followthrough.service
tests/: conftest.py  test_activity_api.py  test_adb_bridge.py  test_ambient_eval.py  test_archive.py  test_audit_fixes.py  test_backup.py  test_classifier.py  test_controls.py  (+22 more)
(+31 files in other folders)
