[project]
name = "followthrough"
version = "0.1.0"
description = "A consent-first ambient BizDev agency powered by Hermes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.28",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.20",
  "email-validator>=2.2",
  "cryptography>=45.0",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
partners = [
  "convex>=0.7",
  "dodopayments>=1.0",
  "elevenlabs>=2.0",
  "linkup-sdk>=0.12",
]
dev = ["pytest>=8.3", "pytest-asyncio>=0.25", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["followthrough"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
